--- a/assets/sass/styles.css.scss
+++ b/assets/sass/styles.css.scss
@@ -42,6 +42,7 @@ ol, ul {
   list-style-position: inside;
   li {
     margin: 1em 0;
+    color: $black;
   }
 }
 
@@ -60,6 +61,7 @@ h2 {
   line-height: 65px;
   font-weight: 300;
   margin-top: 0;
+  color: $black;
 }
 
 h3 {
@@ -78,6 +80,7 @@ h5 {
   font-family: $sans-serif;
   font-size: 14px;
   margin-bottom: 15px;
+  color: $black;
 }
 
 .outer_container {
@@ -222,10 +225,14 @@ h5 {
   h2, h4 {
     @include span-columns(8);
   }
-
   h4 {
-    margin-top: 1em;
+    margin-top: 0px;
   }
+
+  h2 {
+    margin-bottom: 24px;
+  }
+
   h5 {
     font-size: 14px;
   }
@@ -240,6 +247,7 @@ h5 {
   }
   ol {
     list-style-type: square;
+    margin-top: 0px;
   }
   li {
     font-size: 15px;
