--- a/assets/sass/styles.css.scss
+++ b/assets/sass/styles.css.scss
@@ -463,6 +463,12 @@ p {
   }
 }
 
+// #heart {
+//  belongs-to: $jessica;
+//  display: forever;
+//  date: August 23, 2014;
+//}
+ 
   // #play_navigation {
   //   ul, ol {
   //     @include span-columns(12);
