add federated analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,4 +88,5 @@ plays:
 <script src='{{site.baseurl}}/assets/js/jquery-1.11.1.min.js'></script>
 <script src='{{site.baseurl}}/assets/js/stickUp.min.js'></script>
 <script src='{{site.baseurl}}/assets/js/site.js'></script>
+<script id="_fed_an_js_tag" type="text/javascript" src="{{site.baseurl}}/assets/js/federated-analytics.all.min.js?agency=GSA&sub-agency=OGP"></script>
 </body>
