--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@ plays:
         <a href="#plays_index_anchor" title="View the Plays">SEE THE PLAYS</a>
       </div>
       <div class="button">
-        <a href="https://github.com/WhiteHouse/playbook" title="Visit Github to Improve This Content">HELP IMPROVE THE PLAYBOOK</a>
+        <a href="https://github.com/WhiteHouse/playbook" title="Visit Github to Improve This Content">HELP IMPROVE THIS CONTENT</a>
       </div>
     </div>
   </div>
